--- a/Kinect_WpfProject/Kinect_WpfProject/View/SampleRecord.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/SampleRecord.xaml
@@ -13,9 +13,9 @@
         <Grid Margin="32,22,315,113">
             <MediaElement Source="http://hubblesource.stsci.edu/sources/video/clips/details/images/hst_1.mpg" Name="mePlayer" Stretch="None" />
         </Grid>
-        
+
         <Grid HorizontalAlignment="Left" Height="266" Margin="359,22,0,0" VerticalAlignment="Top" Width="215">
-            
+
             <Line X1="{Binding x1[0], diag:PresentationTraceSources.TraceLevel=High, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged }" Y1="{Binding y1[0]}" X2="{Binding x2[0]}" Y2="{Binding y2[0]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[1]}" Y1="{Binding y1[1]}" X2="{Binding x2[1]}" Y2="{Binding y2[1]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[2]}" Y1="{Binding y1[2]}" X2="{Binding x2[2]}" Y2="{Binding y2[2]}" Stroke="LightBlue" StrokeThickness="4" />
@@ -40,13 +40,22 @@
             <Line X1="{Binding x1[21]}" Y1="{Binding y1[21]}" X2="{Binding x2[21]}" Y2="{Binding y2[21]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[22]}" Y1="{Binding y1[22]}" X2="{Binding x2[22]}" Y2="{Binding y2[22]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[23]}" Y1="{Binding y1[23]}" X2="{Binding x2[23]}" Y2="{Binding y2[23]}" Stroke="LightBlue" StrokeThickness="4" />
-            
+
         </Grid>
+
         <TextBox HorizontalAlignment="Left" Height="24" Margin="97,253,0,0" TextWrapping="Wrap" Text="{Binding fileName}" VerticalAlignment="Top" Width="138"/>
-        <Button Content="Button" HorizontalAlignment="Left" Height="24" Margin="250,253,0,0" VerticalAlignment="Top" Width="56" >
+
+        <Button Content="開啟" HorizontalAlignment="Left" Height="24" Margin="250,253,0,0" VerticalAlignment="Top" Width="56" >
             <Button.InputBindings>
                 <MouseBinding Gesture="LeftDoubleClick" Command="{Binding LoadSample}" />
             </Button.InputBindings>
         </Button>
+
+        <Button Content="比對" HorizontalAlignment="Left" Margin="250,291,0,0" VerticalAlignment="Top" Width="56" Height="23">
+            <Button.InputBindings>
+                <MouseBinding Gesture="LeftDoubleClick" Command="{Binding Recognize}" />
+            </Button.InputBindings>
+        </Button>
+        <Label Content="{Binding GestureName}" HorizontalAlignment="Left" Margin="314,22,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
