--- a/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
@@ -3,7 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Menu" Height="300" Width="300">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="114,137,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="錄製樣本動作" HorizontalAlignment="Left" Margin="95,173,0,0" VerticalAlignment="Top" Width="111" FontSize="14" Click="btn_SampleRecord_Click" Height="31"/>
+        <Button Content="動作識別" HorizontalAlignment="Left" Margin="113,95,0,0" VerticalAlignment="Top" Width="76" FontSize="14" Click="btn_UserGestureRecognize_Click" Height="31"/>
 
     </Grid>
 </Window>
