extract kinectCamera class.

--- a/Kinect_WpfProject/Kinect_WpfProject/View/SampleRecord.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/SampleRecord.xaml
@@ -11,7 +11,9 @@
 
     </Window.DataContext>
     <Grid>
-        
+        <Grid Margin="32,22,315,113">
+            <Image Source="{Binding image}"></Image>
+        </Grid>
 
         <Grid HorizontalAlignment="Left" Height="266" Margin="359,22,0,0" VerticalAlignment="Top" Width="215">
 
