--- a/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
@@ -1,10 +1,167 @@
 ﻿<Window x:Class="Kinect_WpfProject.View.Menu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Menu" Height="300" Width="300">
+        Title="MainWindow" Height="800" Width="600" Background="#008B8B" Cursor="Hand" WindowState="Normal" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <Storyboard x:Key="LeftStoryboard_F">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="526.4"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="1.6"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="497.6"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="3.2"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="Left_menu">
+                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="32.477"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="Main_menu">
+                <EasingDoubleKeyFrame KeyTime="0:0:0.3" Value="27.039"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="RightStoryboard_F">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="-97.6"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="-3.2"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="-462.4"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="1.6"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="Main_menu">
+                <EasingDoubleKeyFrame KeyTime="0:0:0.5" Value="-22.858"/>
+                <EasingDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="RightStoryboard_B">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:0.5" Value="-22.858"/>
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+        <Storyboard x:Key="LeftStoryboard_B">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="Left_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:0.5" Value="32.477"/>
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[2].(RotateTransform.Angle)" Storyboard.TargetName="Main_menu">
+                <SplineDoubleKeyFrame KeyTime="0:0:0.5" Value="27.039"/>
+                <SplineDoubleKeyFrame KeyTime="0:0:1" Value="0"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+    </Window.Resources>
     <Grid>
-        <Button Content="錄製樣本動作" HorizontalAlignment="Left" Margin="95,173,0,0" VerticalAlignment="Top" Width="111" FontSize="14" Click="btn_SampleRecord_Click" Height="31"/>
-        <Button Content="動作識別" HorizontalAlignment="Left" Margin="113,95,0,0" VerticalAlignment="Top" Width="76" FontSize="14" Click="btn_UserGestureRecognize_Click" Height="31"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="55*"/>
+            <ColumnDefinition Width="241*"/>
+        </Grid.ColumnDefinitions>
+        <Canvas x:Name="Main_menu" Background="Transparent" RenderTransformOrigin="0.5,0.5" Grid.ColumnSpan="2">
+            <Canvas.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Canvas.RenderTransform>
+            <Grid x:Name="grid" Height="543.8" Canvas.Left="24" Canvas.Top="125.8" Width="510" RenderTransformOrigin="0.5,0.5">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="251*"/>
+                    <RowDefinition Height="21*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="0.348*"/>
+                    <ColumnDefinition Width="0.652*"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Grid.RenderTransform>
+                <Button Height="801" x:Name="button1" Background="#008B8B" 
+        			 Click="button1_Click" Margin="-55,-133,133,-124" VerticalAlignment="Top" Grid.RowSpan="2">
+                    <TextBlock FontSize="36" Foreground="White" Height="408" Text="" Width="73" />
+                </Button>
+                <Button Background="#00C5CD" x:Name="button3" 
+        			HorizontalContentAlignment="Right" VerticalContentAlignment="Bottom"  Click="button3_Click"  Margin="148,-8,-38,10" Grid.ColumnSpan="2" Height="500" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Width="400">
+                    <Button.RenderTransform>
+                        <TransformGroup>
+                            <ScaleTransform/>
+                            <SkewTransform/>
+                            <RotateTransform/>
+                            <TranslateTransform/>
+                        </TransformGroup>
+                    </Button.RenderTransform>
+                    <TextBlock FontSize="36" Foreground="White" Height="64" Text="使用者動作比對" Width="273" />
+                </Button>
+            </Grid>
+        </Canvas>
+        <Canvas x:Name="Left_menu" HorizontalAlignment="Left" Margin="-423,248,0,262" Width="441" RenderTransformOrigin="0.5,0.5">
+            <Canvas.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Canvas.RenderTransform>
+            <Image Height="277" Source="Resources/Img1.jpg" Stretch="Fill" Width="395" Canvas.Top="-5" Canvas.Left="-57"/>
+            <Button Background="#00C5CD" x:Name="button_Left" 
+        			HorizontalContentAlignment="Right" VerticalContentAlignment="Bottom"  Click="button3_Click" Grid.ColumnSpan="2" Height="500" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Canvas.Left="-57" Canvas.Top="-117" Width="400">
+                <Button.RenderTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </Button.RenderTransform>
+                <TextBlock FontSize="36" Foreground="White" Height="58" Text="錄製標準動作" Width="225" />
+            </Button>
+        </Canvas>
+        <TextBlock Height="42" TextWrapping="Wrap" Foreground="White" FontSize="26.667" Margin="388,0,8,8" VerticalAlignment="Bottom" Grid.Column="1"><Run Text="Kinect"/><LineBreak/><Run/><LineBreak/><Run/></TextBlock>
+        <TextBlock Height="100" x:Name="textBlock1" Foreground="#FFF1E7E7" FontSize="36" Margin="10,0,24,0" VerticalAlignment="Top" Grid.ColumnSpan="2" ><Run Text="Kinect "/></TextBlock>
 
     </Grid>
+    
+    
 </Window>
+
+    
