--- a/Kinect_WpfProject/Kinect_WpfProject/View/UserGestureRecognize.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/UserGestureRecognize.xaml
@@ -10,9 +10,9 @@
         <local:UserGestureRecognizeViewModel/>
     </Window.DataContext>
     <Grid>
-
+        
         <Grid HorizontalAlignment="Left" Height="266" Margin="359,22,0,0" VerticalAlignment="Top" Width="215">
-
+            <Canvas>
             <Line X1="{Binding x1[0]}" Y1="{Binding y1[0]}" X2="{Binding x2[0]}" Y2="{Binding y2[0]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[1]}" Y1="{Binding y1[1]}" X2="{Binding x2[1]}" Y2="{Binding y2[1]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[2]}" Y1="{Binding y1[2]}" X2="{Binding x2[2]}" Y2="{Binding y2[2]}" Stroke="LightBlue" StrokeThickness="4" />
@@ -37,10 +37,25 @@
             <Line X1="{Binding x1[21]}" Y1="{Binding y1[21]}" X2="{Binding x2[21]}" Y2="{Binding y2[21]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[22]}" Y1="{Binding y1[22]}" X2="{Binding x2[22]}" Y2="{Binding y2[22]}" Stroke="LightBlue" StrokeThickness="4" />
             <Line X1="{Binding x1[23]}" Y1="{Binding y1[23]}" X2="{Binding x2[23]}" Y2="{Binding y2[23]}" Stroke="LightBlue" StrokeThickness="4" />
-            
-        </Grid>
+                <Ellipse Visibility="{Binding visibility[0]}" Canvas.Left="{Binding x1[5]}" Canvas.Top="{Binding y1[5]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[1]}" Canvas.Left="{Binding x1[6]}" Canvas.Top="{Binding y1[6]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[2]}" Canvas.Left="{Binding x1[7]}" Canvas.Top="{Binding y1[7]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[3]}" Canvas.Left="{Binding x1[8]}" Canvas.Top="{Binding y1[8]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[4]}" Canvas.Left="{Binding x2[8]}" Canvas.Top="{Binding y2[8]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[5]}" Canvas.Left="{Binding x2[9]}" Canvas.Top="{Binding y2[9]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[6]}" Canvas.Left="{Binding x1[11]}" Canvas.Top="{Binding y1[11]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[7]}" Canvas.Left="{Binding x1[12]}" Canvas.Top="{Binding y1[12]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[8]}" Canvas.Left="{Binding x1[13]}" Canvas.Top="{Binding y1[13]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[9]}" Canvas.Left="{Binding x1[14]}" Canvas.Top="{Binding y1[14]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[10]}" Canvas.Left="{Binding x2[14]}" Canvas.Top="{Binding y2[14]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                <Ellipse Visibility="{Binding visibility[11]}" Canvas.Left="{Binding x2[15]}" Canvas.Top="{Binding y2[15]}" Stroke="Black" HorizontalAlignment="Left" VerticalAlignment="Top" Height="8" Width="8" Fill="Red"/>
+                
+                
 
-        <Button Content="比對" BorderThickness="0" FontSize="22" Foreground="White" Background="#00C5CD" Height="72" Margin="33,234,315,0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="Button_Click">
+            </Canvas>
+        </Grid>
+        
+            <Button Content="比對" BorderThickness="0" FontSize="22" Foreground="White" Background="#00C5CD" Height="72" Margin="33,234,315,0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="Button_Click">
             <Button.InputBindings>
                 <MouseBinding Gesture="LeftDoubleClick" Command="{Binding Recognize}" />
             </Button.InputBindings>
