--- a/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/Menu.xaml
@@ -122,7 +122,7 @@
                 </Grid.RenderTransform>
 
                 <Button Height="341" x:Name="button1" BorderThickness="0"   Background="#343838" 
-        			 Click="button1_Click" Margin="8,41,70,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+        			MouseEnter="button1_ClickTrigger" MouseLeave="button1_Leave"  Margin="8,41,70,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
                     <Button.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -135,7 +135,7 @@
                 </Button>
 
                 <Button  x:Name="button3" 
-        			HorizontalContentAlignment="Right" BorderThickness="0" VerticalContentAlignment="Bottom"  Click="buttonUserGestureRecognize_Click"  Margin="0,0,-5,78" Grid.ColumnSpan="2" Height="245" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
+        			HorizontalContentAlignment="Right" BorderThickness="0" VerticalContentAlignment="Bottom"   Click="buttonUserGestureRecognize_Click"  Margin="0,0,-5,78" Grid.ColumnSpan="2" Height="245" VerticalAlignment="Bottom" RenderTransformOrigin="0.5,0.5" Grid.Column="1">
                     <Image Source="/Recognize.jpg" Height="245" Width="339" />
                     <Button.RenderTransform>
                         <TransformGroup>
