fixed bugs, save and load.

--- a/Kinect_WpfProject/Kinect_WpfProject/View/SampleRecord.xaml
+++ b/Kinect_WpfProject/Kinect_WpfProject/View/SampleRecord.xaml
@@ -44,7 +44,7 @@
 
             </Grid>
             <Rectangle  Fill="#c9d6de"  Stroke="#D8E6E0" StrokeThickness="2"           RadiusX="5" RadiusY="5" Margin="298,98,22,143"/>
-            <TextBox BorderThickness="0" FontSize="26" Foreground="#52616a" HorizontalAlignment="Left" Height="33" Margin="308,109,0,0" TextWrapping="Wrap" Text="{Binding fileNameLoad}" VerticalAlignment="Top" Width="260"/>
+            <TextBox BorderThickness="0" FontSize="26" Foreground="#52616a" HorizontalAlignment="Left" Height="33" Margin="308,109,0,0" TextWrapping="Wrap" Text="{Binding fileNameLoad, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="260"/>
             <Button Content="開啟" BorderThickness="0"  FontSize="22" Foreground="#d9e1e8" Background="#9baec8" Height="34" Margin="487,134,41,0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"  >
                 <Button.BitmapEffect>
                     <DropShadowBitmapEffect ShadowDepth="5"
@@ -60,7 +60,7 @@
             <TextBlock x:Name="textBlock_Copy" Foreground="#6E7783" FontSize="12" HorizontalAlignment="Center" Height="43" Margin="308,156,117,134" TextWrapping="Wrap" VerticalAlignment="Center" Width="174"><Run Text="輸入動作名稱"/><Run Text="按下&quot;開啟&quot;"/><Run Text="後，"/><Run Text="即"/><Run Text="可"/><Run Text="播"/><Run Text="放動作"/><Run Text="。"/></TextBlock>
 
             <Rectangle  Fill="#c9d6de"  Stroke="#D8E6E0" StrokeThickness="2"           RadiusX="5" RadiusY="5" Margin="298,214,22,27"/>
-            <TextBox BorderThickness="0" FontSize="26" Foreground="#52616a" HorizontalAlignment="Left" Height="33" Margin="308,223,0,0" TextWrapping="Wrap" Text="{Binding fileNameSave}" VerticalAlignment="Top" Width="260" TextChanged="TextBox_TextChanged"/>
+            <TextBox BorderThickness="0" FontSize="26" Foreground="#52616a" HorizontalAlignment="Left" Height="33" Margin="308,223,0,0" TextWrapping="Wrap" Text="{Binding fileNameSave, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" Width="260" TextChanged="TextBox_TextChanged"/>
 
             <Button Content="儲存" BorderThickness="0"  FontSize="22" Foreground="#d9e1e8" Background="#9baec8" Height="34" Margin="487,250,41,0" RenderTransformOrigin="0.5,0.5" VerticalAlignment="Top" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="Button_Click"   >
                 <Button.BitmapEffect>
